style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Roboto";
    line-height: 1.5;
    background-color: #f9f9f9;
    color: #333;
}

/* Mobile Layout */

.hero {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 2rem;
    gap: 3rem;
}

.hero-top-layer {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    margin-bottom: 2rem;
}


.hero-gradient-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    height: 300px;
    width: 100%;
    background: #1090b0;
    clip-path: polygon(0 0, 100% 0, 100% 60%, 0 100%);
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
    z-index: 1;
}

.hero-photo-card {
    position: relative;
    width: 100%;
    max-width: 250px;
    aspect-ratio: 2 / 3;
    overflow: hidden;
    z-index: 2;
    background-color: white;
    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
    margin-bottom: -2rem;
}

.hero-photo-card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

.hero-photo-card h1 {
    position: absolute;
    bottom: -0.5rem;
    width: 100%;
    color: #fff;
    padding: 0.5rem;
    font-size: 2.5rem;
    text-align: left;
    font-weight: 400;
    margin: 0;
    line-height: 1.2;
    font-family: "Playfair Display";
}

.hero-text-card h2 {
    font-family: "Playfair Display";
}

.hero-text-card {
    text-align: center;
}

.hero-icons {
    margin-top: 0.5rem;
    font-size: 1.5rem;
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.my-work h2 {
    margin-bottom: 1rem;
    font-family: "Playfair Display";
    text-align: center;
}

.my-work h3 {
    text-align: center;
    margin-bottom: 1rem;
    font-family: "Playfair Display";
}

.work-grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
}

.work-card {
    background-color: #fff;
    overflow: hidden;
    box-shadow: 0 0 10px rgba(0,0,0,0.4);
    max-width: 300px;
    width: 100%;
    display: block;
    margin: 0 auto;
    margin-bottom: 4rem;
}

.work-image {
    background-color: #a7d0cd;
    color: #fff;
    padding: 5rem;
    font-size: 1.8rem;
    text-align: center;
    font-weight: bold;
    font-family: "Playfair Display";
}

.work-info {
    padding: 1rem;
}

.work-icons {
    margin: 0;
    display: flex;
    gap: 0.5rem;
    font-size: 1.2rem;
    align-items: center;
}

.work-icons i, img {
    width: 1.2rem;
    height: 1.2rem;
    display: block;
  }

.contact {
    width: 100%;
    max-width: 300px;
    display: block;
    margin: 0 auto;
    gap: 1rem;
    margin-top: 2rem;
    align-items: center;
    background-color: #2596be;
    padding: 2rem 1rem;
    position: relative;
    overflow: hidden;
}

.work-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 0.5rem;
  }
  
  .work-header h3 {
    margin: 0;
    font-size: 1.2rem;
  }

.contact-info {
    text-align: center;
    color: white;
}

.contact-info h2 {
    font-family: "Playfair Display";
    font-weight: 400;
    font-size: 2rem;
    margin-bottom: 1.2rem;
    text-align: center;
}

.contact-info p:first-of-type {
    font-size: 1.2rem;
    text-align: left;
    margin-bottom: 1rem;
}

.contact-info p:not(first-of-type) {
    font-size: 0.9rem;
    text-align: left;
    margin-top: 0.5rem;
}

.contact-icons p {
    margin-top: 0.5rem;
    color: white;
}

.social-icons {
    color: black;
    margin-top: 2rem;
    margin-bottom: 3rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1.5rem;
}

.social-icons i {
    font-size: 2.5em;
}

.contact-photo {
    width: 100%;
    height: auto;
    overflow: hidden;
    margin: 0;
    margin-left: -1rem;
    margin-right: -1rem;
    margin-bottom: -2rem;
    width: calc(100% + 2rem);
}

.contact-photo img {
    width: 100%;
    height: 100%;
    display: block;
    object-fit: cover;
}

.my-work-container {
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 2rem;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}



.work-card:nth-child(1) .work-image { background-color: #7c75ca; }
.work-card:nth-child(2) .work-image { background-color: #d88f39; }
.work-card:nth-child(3) .work-image { background-color: #5e8f4d; }
.work-card:nth-child(4) .work-image { background-color: #ca7599; }
.work-card:nth-child(5) .work-image { background-color: #4692d9; }
.work-card:nth-child(6) .work-image { background-color: #5e8f4d; }


/* Tablet Layout */

@media (min-width: 768px) {
    .hero {
        position: relative;
        max-width: 900px;
        margin: 0 auto;
        height: 400px;
        justify-content: flex-start;
        align-items: flex-start;
    }

    .hero-photo-card {
        position: absolute;
        top: 2rem;
        left: 5rem;
        z-index: 2;
        aspect-ratio: 1 / 1;
    }

    .hero-photo-card h1 {
        position: absolute;
        top: -50px;
        padding-left: 1rem;
        white-space: nowrap;
        z-index: 3;
    }

    .hero-text-card {
        position: absolute;
        top: 4rem;
        right: 2.5rem;
        left: 10rem;
        z-index: 1;
        background: white;
        padding: 1rem;
        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
        max-width: 60%;
        height: 18rem;
        width: 23rem;
    }

    .hero::before {
        content: "Ashley Williams";
        position: absolute;
        top: 0rem;
        left: 18rem;
        font-size: 2.6rem;
        font-family: "Playfair Display";
        font-weight: 400;
        color: white;
        z-index: 10;
        white-space: nowrap;
    }
    
    .hero-photo-card h1 {
        opacity: 0;
        visibility: hidden;
    }



    .hero-gradient-wrapper {
        clip-path: polygon(0 0, 100% 0, 100% 60%, 0 100%);
    }

    .hero-icons {
        display: none;
    }

    .hero-text-card-content {
        padding-left: 180px;
    }

    .hero-text-card-content p {
        font-size: 0.70rem;
        text-align: left;
        padding-top: 20px;
    }

    .work-grid {
        grid-template-columns: repeat(2, 1fr);
        max-width: 900px;
        margin: 0 auto;
        gap: 2rem;
    }

    .work-card {
        margin-bottom: 2rem;
        max-width: none;
        width: 100%;
    }

    .my-work {
        padding: 0 2rem;
    }

    .contact {
        display: flex;
        max-width: none;
        width: 100%;
        padding: 3rem 2rem;
        gap: 2rem;
        background-color: #2596be;
    }

    .contact-info {
        flex: 1;
        text-align: left;
        padding: 1rem;
    }

    .contact-photo {
        flex: 0 0 40%;
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .contact-photo img {
        width: 100%;
        height: auto;
        aspect-ratio: 2 / 3;
        object-fit: cover;
    }

    .my-work h2 {
        margin-bottom: 1rem;
        font-family: "Playfair Display";
        text-align: left;
    }
    
    .my-work h3 {
        text-align: left;
        margin-bottom: 1rem;
        font-family: "Playfair Display";
    }

    /* Desktop Layout */
    
    @media (min-width: 1024px) {
        .hero-icons {
            display: flex;
            position: absolute;
            bottom: 1rem;
            right: 1.5rem;
            justify-content: flex-end;
            gap: 1.5rem;
            font-size: 1.8rem;
            z-index: 3;
        }

        .hero-text-card {
            position: absolute;
            top: 4rem;
            right: 2.5rem;
            left: 10rem;
            z-index: 1;
            background: white;
            padding: 1rem;
            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
            max-width: 60%;
            height: 18rem;
            width: 50rem;
            display: flex;
        }

        .hero-text-card h2 {
            text-align: left;
        }
        
        .hero-text-card p {
            font-size: 0.9rem;
        }

        .hero-photo-card {
            position: absolute;
            top: 2rem;
            left: 5rem;
            z-index: 2;
            aspect-ratio: 1 / 2;
            max-height: 21rem;
        }

        .hero::before {
            content: none;
        }

        .hero-photo-card h1 {
            opacity: 1;
            visibility: visible;
            position: absolute;
            bottom: 0.2rem;
            top: auto;
            width: 100%;
            padding: 0.5rem;
            font-size: 1.8rem;
            line-height: 1;
            color: #fff;
            text-transform: none;
        }

        .hero-photo-card h1 br {
            display: none;
        }

        .hero-photo-card h1 {
            white-space: nowrap;
            font-size: 2.1rem;
        }

        .work-grid {
            grid-template-columns: repeat(3, 1fr);
            max-width: 100%;
            gap: 2rem;
        }


    }
}

